--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,9 +21,9 @@ set -g status-right ' #{?client_prefix,#[reverse]<Prefix>#[noreverse] ,}"#{=21:p
 setw -g clock-mode-style 12
 
 # Active window title colors
-set-window-option -g window-status-current-style fg=default #orange
-set-window-option -g window-status-current-style bg=colour87 #colour11
-set-window-option -g window-status-current-style bright
+# set-window-option -g window-status-current-style fg=default #orange
+# set-window-option -g window-status-current-style bg=colour87 #colour11
+set-window-option -g window-status-current-style reverse
 
 # Mouse mode! 
 # Turned it off. Makes it easy to resize panes, select panes/windows
