updated tmux conf, added reading bash PS1 colours

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,6 +20,10 @@ set -g status-right ' #{?client_prefix,#[reverse]<Prefix>#[noreverse] ,}"#{=21:p
 # Clock mode in Ctrl-b, t
 setw -g clock-mode-style 12
 
+# Get tmux to read bash colours for PS1 prompt colour
+# ref: https://techantidote.com/tmux-not-displaying-bash-prompt-colors/
+set -g default-terminal "screen-256color"
+
 # Active window title colors
 # set-window-option -g window-status-current-style fg=default #orange
 # set-window-option -g window-status-current-style bg=colour87 #colour11
