update: added .desktop and bash scripts

--- a/bash/.common_bashrc
+++ b/bash/.common_bashrc
@@ -10,6 +10,16 @@ case $- in
       *) return;;
 esac
 
+# User specific environment
+if ! [[ "$PATH" =~ "$HOME/.local/bin:" ]]; then
+	PATH="$HOME/.local/bin:$PATH"
+fi
+
+# Add scripts
+if ! [[ "$PATH" =~ "$HOME/.local/scripts" ]]; then
+	PATH="$HOME/.local/scripts:$PATH"
+fi
+
 # don't put duplicate lines or lines starting with space in the history.
 # See bash(1) for more options
 HISTCONTROL=ignoreboth
