update: updated hyprland

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -46,7 +46,8 @@ bindl = , switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-1,disable"
 # Monitors sockets to trigger a monitor refresh script
 # All in bash + socat
 # This effort is probably worth a blogpost tbh
-exec-once = ~/socket2-mon.sh
+# Don't do this!
+# exec-once = ~/socket2-mon.sh
 
 # This line below gets any subsequent monitors to mirror the laptop screen
 # monitor=,preferred,auto,1.15,mirror,eDP-1
@@ -66,6 +67,7 @@ exec-once = swayidle -w timeout 60 "$HOME/swaylock-fancy/swaylock-fancy.sh" \
 # exec-once = waybar & hyprpaper & firefox
 exec-once = waybar
 exec-once = swaybg -i ~/wallpapers/wallpaperflare.com_wallpaper.jpg
+exec-once = nm-applet --indicator 
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -195,7 +197,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
 bind = $mainMod, U, exec, wlogout
-bind = $mainMod, L, exec, ~/swaylock-fancy/swaylock-fancy.sh
+bind = $mainMod, L, exec, $HOME/.local/scripts/swaylock-fancy.sh
 # printscreen from from https://wiki.hyprland.org/FAQ/#how-do-i-screenshot
 # No mod! Jsut press printscreen
 bind = , Print, exec, grim -g "$(slurp -d)" - | wl-copy
