fix: fixed swayidle script path in hyprland conf

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -59,7 +59,7 @@ bindl = , switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-1,disable"
 exec-once = /usr/libexec/polkit-gnome-authentication-agent-1
 
 # This is for idling
-exec-once = swayidle -w timeout 60 "$HOME/swaylock-fancy/swaylock-fancy.sh" \
+exec-once = swayidle -w timeout 60 "$HOME/.local/scripts/swaylock-fancy.sh" \
                         timeout 120 "hyprctl dispatch dpms off" \
                         resume "hyprctl dispatch dpms on"
 
