update: bluetooth applet, random wallpapers, hyprland refresh keybind

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -58,6 +58,10 @@ bindl = , switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-1,disable"
 # Polkit
 exec-once = /usr/libexec/polkit-gnome-authentication-agent-1
 
+# Bluetooth
+# blueman recommended in https://www.reddit.com/r/hyprland/comments/165hhd9/
+exec-once = blueman-applet
+
 # This is for idling
 exec-once = swayidle -w timeout 60 "$HOME/.local/scripts/swaylock-fancy.sh" \
                         timeout 120 "hyprctl dispatch dpms off" \
@@ -66,7 +70,11 @@ exec-once = swayidle -w timeout 60 "$HOME/.local/scripts/swaylock-fancy.sh" \
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
 exec-once = waybar
-exec-once = swaybg -i ~/wallpapers/wallpaperflare.com_wallpaper.jpg
+# exec-once = swaybg -i ~/wallpapers/wallpaperflare.com_wallpaper.jpg
+
+
+# Search for files, shuffles them and select one, pipe into swaybg
+exec-once = swaybg -i $(find ~/wallpapers/. -type f | shuf -n1)
 exec-once = nm-applet --indicator 
 
 # Source a file (multi-file configs)
