chore: updated ranger/rifle.conf

--- a/ranger/.config/ranger/rifle.conf
+++ b/ranger/.config/ranger/rifle.conf
@@ -141,7 +141,7 @@ mime ^video, terminal, !X, has mplayer   = mplayer -- "$@"
 # Documents
 #-------------------------------------------
 # Jupyter notebooks
-ext ipynb  = nbread "$1" --pager
+ext ipynb  = nbread "$1"
 ext pdf, has llpp,     X, flag f = llpp "$@"
 ext pdf, has zathura,  X, flag f = zathura -- "$@"
 ext pdf, has mupdf,    X, flag f = mupdf "$@"
