update: updated hyprland binds for reload and wofi, and added floating terminal launch

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -194,20 +194,30 @@ device:epic-mouse-v1 {
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+# See https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, foot
 bind = $mainMod, C, killactive, 
 bind = $mainMod, M, exit, 
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, togglefloating, 
-bind = $mainMod, R, exec, wofi --show drun
+bind = $mainMod, O, exec, wofi --show drun
+bind = $mainMod, R, exec, hyprctl reload
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+# this is for elegant floating terminal
+# how to make it a pseudo-tiled terminal though?
+# have tried the obvious options, no dice
+bind = $mainMod SHIFT, RETURN, exec, hyprctl dispatch exec "[float;size 90% 80%;move 5% 10%;]" foot
+
+# Clears dunst notifications
+# Keys can be boud multiple times so I can still use ESC for other stuff
+# Edit: What happened is that ESC is no longer usable for other things! Sheesh
+# bind = , Escape, exec, dunstctl close-all
 
 bind = $mainMod, U, exec, wlogout
 bind = $mainMod, L, exec, $HOME/.local/scripts/swaylock-fancy.sh
 # printscreen from from https://wiki.hyprland.org/FAQ/#how-do-i-screenshot
-# No mod! Jsut press printscreen
+# No mod! Just press printscreen
 bind = , Print, exec, grim -g "$(slurp -d)" - | wl-copy
 bind = $mainMod, F, fullscreen
 
