--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -268,5 +268,7 @@ bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bind = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bind = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
 bind = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-# bind = , XF86MonBrightnessUp, 
-# bind = , XF86MonBrightnessDown, 
+
+# Screen brightness
+bind = , XF86MonBrightnessUp, exec, brightnessctl s +5% && notify-send "Brightnesss $(brightnessctl g -P)%" -i weather-clear -t 300
+bind = , XF86MonBrightnessDown, exec, brightnessctl s 5%- && notify-send "Brightness $(brightnessctl g -P)%" -i weather-clear -t 300
