update: added PrtSrc -> swappy keybind

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -219,6 +219,8 @@ bind = $mainMod, L, exec, $HOME/.local/scripts/swaylock-fancy.sh
 # printscreen from from https://wiki.hyprland.org/FAQ/#how-do-i-screenshot
 # No mod! Just press printscreen
 bind = , Print, exec, grim -g "$(slurp -d)" - | wl-copy
+# Add Super key to pipe to swappy instead
+bind = $mainMod, Print, exec, grim -g "$(slurp -d)" - | swappy -f -
 bind = $mainMod, F, fullscreen
 
 # Move focus with mainMod + arrow keys
