update: start tmux panes at 1 instead of 0

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,6 +29,10 @@ set -g default-terminal "screen-256color"
 # set-window-option -g window-status-current-style bg=colour87 #colour11
 set-window-option -g window-status-current-style reverse
 
+# Start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
+
 # Mouse mode! 
 # Turned it off. Makes it easy to resize panes, select panes/windows
 # But disables PuTTy highlight to copy. 
