update: change wallpaper script to make it easier to call

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -72,7 +72,8 @@ exec-once = waybar
 
 
 # Search for files, shuffles them and select one, pipe into swaybg
-exec-once = swaybg -i $(find ~/wallpapers/. -type f | shuf -n1)
+# exec-once = swaybg -i $(find ~/wallpapers/. -type f | shuf -n1)
+exec-once = ~/.local/scripts/change-wallpaper.sh
 exec-once = nm-applet --indicator 
 
 # Source a file (multi-file configs)
