update: updated foot terminal styling

--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -11,7 +11,10 @@ term=xterm-256color
 # locked-title=no
 
 # Use fc-list to find the proper names for these fonts
-font=GitLab Mono:size=12
+# font=GitLab Mono:size=12
+# font=JuliaMono:size=12
+font=CaskaydiaMono Nerd Font Mono:size=12
+
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
@@ -78,7 +81,8 @@ font=GitLab Mono:size=12
 # long-press-delay=400
 
 [colors]
-# alpha=1.0
+alpha=0.8
+background=2a2f33
 # background=242424
 # foreground=ffffff
 # flash=7f7f00
