update: added emoji kb, golden ratio splits and updated screensaver time in hyprland

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -63,7 +63,9 @@ exec-once = /usr/libexec/polkit-gnome-authentication-agent-1
 exec-once = blueman-applet
 
 # This is for idling
-exec-once = swayidle -w timeout 60 "$HOME/.local/scripts/swaylock-fancy.sh" timeout 120 "hyprctl dispatch dpms off" resume "hyprctl dispatch dpms on"
+# Lock screen at 5mins = 300s
+# Power off all screens at 15min = 900s
+exec-once = swayidle -w timeout 300 "$HOME/.local/scripts/swaylock-fancy.sh" timeout 900 "hyprctl dispatch dpms off" resume "hyprctl dispatch dpms on"
 
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
@@ -158,6 +160,8 @@ dwindle {
     # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
     pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = yes # you probably want this
+    # 1.618 / (1.618 + 1) * 2 coz this is from 0.1 to 1.9 so Im guessing x2?
+    default_split_ratio = 1.236
 }
 
 master {
@@ -206,6 +210,10 @@ bind = $mainMod SHIFT, RETURN, exec, hyprctl dispatch exec "[pseudo;size 90% 80%
 
 bind = $mainMod, U, exec, wlogout
 bind = $mainMod, L, exec, $HOME/.local/scripts/swaylock-fancy.sh
+
+# Win + . -> emoji selector
+bind = $mainMod, period, exec, $HOME/.local/scripts/emoji.sh
+
 # printscreen from from https://wiki.hyprland.org/FAQ/#how-do-i-screenshot
 # No mod! Just press printscreen
 bind = , Print, exec, grim -g "$(slurp -d)" - | wl-copy
