--- a/git/.gitmyconfig
+++ b/git/.gitmyconfig
@@ -5,7 +5,7 @@
 # [include]
 #     path = .gitmyconfig
 [alias]
-	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%ci) %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
 [core]
     editor = vim
 [diff "jupyternotebook"]
