update: made vim default in bashrc

--- a/bash/.common_bashrc
+++ b/bash/.common_bashrc
@@ -134,3 +134,6 @@ clear-screen-keep-sb() {
     tput -x clear
 }
 bind -x '"\C-l":"clear-screen-keep-sb"'
+
+export VISUAL=vim
+export EDITOR="$VISUAL"
