update: replaced swaylock script w/ hyprlock

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -65,7 +65,7 @@ exec-once = blueman-applet
 # This is for idling
 # Lock screen at 5mins = 300s
 # Power off all screens at 15min = 900s
-exec-once = swayidle -w timeout 300 "$HOME/.local/scripts/swaylock-fancy.sh" timeout 900 "hyprctl dispatch dpms off" resume "hyprctl dispatch dpms on"
+exec-once = swayidle -w timeout 300 hyprlock timeout 900 "hyprctl dispatch dpms off" resume "hyprctl dispatch dpms on"
 
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
@@ -209,7 +209,8 @@ bind = $mainMod SHIFT, RETURN, exec, hyprctl dispatch exec "[pseudo;size 90% 80%
 # bind = , Escape, exec, dunstctl close-all
 
 bind = $mainMod, U, exec, wlogout
-bind = $mainMod, L, exec, $HOME/.local/scripts/swaylock-fancy.sh
+# bind = $mainMod, L, exec, $HOME/.local/scripts/swaylock-fancy.sh
+bind = $mainMod, L, exec, hyprlock
 
 # Win + . -> emoji selector
 bind = $mainMod, period, exec, $HOME/.local/scripts/emoji.sh
