--- a/hyprland/.config/hypr/hyprlock.conf
+++ b/hyprland/.config/hypr/hyprlock.conf
@@ -72,9 +72,9 @@ input-field {
     dots_spacing = 0.15 # Scale of dots' absolute size, 0.0 - 1.0
     dots_center = false
     dots_rounding = -1 # -1 default circle, -2 follow input-field rounding
-    outer_color = rgb(151515)
+    outer_color = rgb(150, 150, 150)
     inner_color = rgb(200, 200, 200)
-    font_color = rgb(10, 10, 10)
+    font_color = rgb(50, 50, 50)
     fade_on_empty = true
     fade_timeout = 300 # Milliseconds before fade_on_empty is triggered.
     placeholder_text = <i>Input Password...</i> # Text rendered in the input box when it's empty.
@@ -95,3 +95,18 @@ input-field {
     halign = center
     valign = center
 }
+
+# Probably no image for now, detracts a bit from the cleanness
+# image {
+#     monitor =
+#     path = ~/profile.jpeg
+#     size = 150 # lesser side if not 1:1 ratio
+#     rounding = -1 # negative values mean circle
+#     border_size = 3
+#     border_color = rgb(100, 100, 100)
+#     rotate = 0
+
+#     position = 0, 200
+#     halign = center
+#     valign = center
+# }
