update: replaced swayidle with hypridle

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -65,7 +65,8 @@ exec-once = blueman-applet
 # This is for idling
 # Lock screen at 5mins = 300s
 # Power off all screens at 15min = 900s
-exec-once = swayidle -w timeout 300 hyprlock timeout 900 "hyprctl dispatch dpms off" resume "hyprctl dispatch dpms on"
+# exec-once = swayidle -w timeout 300 hyprlock timeout 900 "hyprctl dispatch dpms off" resume "hyprctl dispatch dpms on"
+exec-once = hypridle
 
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
