--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -195,7 +195,7 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit, 
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, togglefloating, 
-bind = $mainMod, O, exec, wofi --show drun
+bind = $mainMod, O, exec, pkill -x wofi || wofi --show drun
 bind = $mainMod, R, exec, hyprctl reload
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
