update: fixed laptop screen open/close logic

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -24,8 +24,9 @@ monitor=,preferred,auto,1
 # 1
 # switch so it turns off laptop monitor in clamshell mode
 # https://www.reddit.com/r/hyprland/comments/15xj3p1/comment/jx9j0by/
-bindl = , switch:off:Lid Switch,exec,hyprctl keyword monitor "$defaultMonitor,preferred,0x0,1.2"
-bindl = , switch:on:Lid Switch,exec,hyprctl keyword monitor "$defaultMonitor,disable"
+# bindl = , switch:off:Lid Switch,exec,hyprctl keyword monitor "$defaultMonitor,preferred,0x0,1"
+# bindl = , switch:on:Lid Switch,exec,hyprctl keyword monitor "$defaultMonitor,disable"
+# If the last monitor is turned off, hyprland signs out?
 
 # 2
 # Also see
@@ -48,6 +49,11 @@ bindl = , switch:on:Lid Switch,exec,hyprctl keyword monitor "$defaultMonitor,dis
 # This effort is probably worth a blogpost tbh
 # Don't do this!
 # exec-once = ~/socket2-mon.sh
+
+# Turns off the monitor screen
+# If it is the last screen available, the computer goes into suspend
+bindl = , switch:off:Lid Switch,exec,hyprctl dispatch dpms off
+bindl = , switch:on:Lid Switch,exec,hyprctl dispatch dpms on
 
 # This line below gets any subsequent monitors to mirror the laptop screen
 # monitor=,preferred,auto,1.15,mirror,eDP-1
