update: allowed MMB to move windows in hyprland

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -274,8 +274,11 @@ bind = $mainMod SHIFT, S, movetoworkspacesilent, special:magic
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
-# Move/resize windows with mainMod + LMB/RMB and dragging
+# Move windows with mainMod + LMB / MMB and dragging
 bindm = $mainMod, mouse:272, movewindow
+bindm = , mouse:274, movewindow
+
+# Resize windows with mainMod + RMB and dragging
 bindm = $mainMod, mouse:273, resizewindow
 
 # Keyboard media keys
