update: reverted using MMB to move windows because it disables it :/

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -276,7 +276,8 @@ bind = $mainMod, mouse_up, workspace, e-1
 
 # Move windows with mainMod + LMB / MMB and dragging
 bindm = $mainMod, mouse:272, movewindow
-bindm = , mouse:274, movewindow
+# Remove middle click itself! Bad idea!
+# bindm = , mouse:274, movewindow
 
 # Resize windows with mainMod + RMB and dragging
 bindm = $mainMod, mouse:273, resizewindow
