feat: added hyprpicker

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -229,6 +229,8 @@ bind = , Print, exec, grim -g "$(slurp -d)" - | wl-copy
 bind = $mainMod, Print, exec, grim -g "$(slurp -d)" - | swappy -f -
 bind = $mainMod, F, fullscreen
 
+bind = $mainMod SHIFT, P, exec, $HOME/.local/scripts/color-picker-with-notify.sh 
+
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
