update: changes as hyprland is upgraded to 0.44.1

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -14,9 +14,16 @@
 # Define the laptop screen itself to have 1.15
 # And fix the location to be origin
 $defaultMonitor = eDP-1
-monitor=$defaultMonitor,preferred,0x0,1.2
+monitor=$defaultMonitor,preferred,0x0,1
+
+# New line just for home monitor to lock resolution
+# monitor=desc:LG Electronics LG ULTRAGEAR 310NTRL7L34,2560x1440@60,auto,1.0
+monitor=HDMI-A-2,2560x1440@60,auto,1
+monitor=DP-3,1920x1080@60,auto,1
+
 # this allows all monitors to queue up towards the right
-monitor=,preferred,auto,1
+# if the default monitor is available, plugged in displays will mirror it
+# monitor=,preferred,auto,1,mirror,$defaultMonitor
 
 # How to make it so that when I toggle off a monitor
 # it stays off when I do hyprctl reload?
@@ -173,7 +180,7 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    new_status = master
 }
 
 gestures {
@@ -208,7 +215,7 @@ bind = $mainMod, J, togglesplit, # dwindle
 # this is for elegant floating terminal
 # how to make it a pseudo-tiled terminal though?
 # have tried the obvious options, no dice
-bind = $mainMod SHIFT, RETURN, exec, hyprctl dispatch exec "[pseudo;size 90% 80%;move 5% 10%]" foot
+bind = $mainMod SHIFT, RETURN, exec, hyprctl dispatch exec "[float;size 90% 80%;move 5% 10%;tile;pseudo]" foot
 
 # Clears dunst notifications
 # Keys can be boud multiple times so I can still use ESC for other stuff
