update: fixed nbread not called in rifle.conf

--- a/ranger/.config/ranger/rifle.conf
+++ b/ranger/.config/ranger/rifle.conf
@@ -81,6 +81,10 @@ ext x?html?, has links,             terminal = links "$@"
 ext x?html?, has lynx,              terminal = lynx -- "$@"
 ext x?html?, has w3m,               terminal = w3m "$@"
 
+# Jupyter notebooks
+# Put higher so that nbread has priority
+ext ipynb, has nbread, label nbread, terminal = nbread "$@"
+
 #-------------------------------------------
 # Misc
 #-------------------------------------------
@@ -140,8 +144,6 @@ mime ^video, terminal, !X, has mplayer   = mplayer -- "$@"
 #-------------------------------------------
 # Documents
 #-------------------------------------------
-# Jupyter notebooks
-ext ipynb  = nbread "$1"
 ext pdf, has llpp,     X, flag f = llpp "$@"
 ext pdf, has zathura,  X, flag f = zathura -- "$@"
 ext pdf, has mupdf,    X, flag f = mupdf "$@"
