chore: added git update alias

--- a/git/.gitmyconfig
+++ b/git/.gitmyconfig
@@ -6,6 +6,7 @@
 #     path = .gitmyconfig
 [alias]
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%ci) %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+    update = !git checkout main && git fetch --all && git pull && git fetch -p
 [core]
     editor = vim
 [diff "jupyternotebook"]
