update: set tmux scrollback limit to 30k for long logs

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -48,3 +48,6 @@ bind-key -r Up select-pane -U \; display-pane
 bind-key -r Right select-pane -R \; display-pane
 
 # Referred to https://github.com/sbernheim4/dotfiles/blob/master/.tmux.conf
+
+# Bigger scrollback for scrolling back to see long logs
+set -g history-limit 30000
