update: seconds in tmux time for easier log reading

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,7 +15,10 @@ set -g repeat-time 200
 # Clock in status bar
 # Thanks to https://stackoverflow.com/questions/12003726/give-a-hint-when-press-prefix-key-in-tmux! 
 # For date, there's a space built-in after %b! 
-set -g status-right ' #{?client_prefix,#[reverse]<Prefix>#[noreverse] ,}"#{=21:pane_title}" %l:%M %p, %b %d %a '
+set -g status-right ' #{?client_prefix,#[reverse]<Prefix>#[noreverse] ,}"#{=21:pane_title}" %l:%M:%S %p, %b %d %a '
+
+# Set status bar update duration
+set -g status-interval 5
 
 # Clock mode in Ctrl-b, t
 setw -g clock-mode-style 12
