update: updated screenshot and Win-T now toggles monitor

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -228,14 +228,19 @@ bind = $mainMod, U, exec, wlogout
 # bind = $mainMod, L, exec, $HOME/.local/scripts/swaylock-fancy.sh
 bind = $mainMod, L, exec, hyprlock
 
+# Run toggle screen script
+bind = $mainMod, T, exec, $HOME/.local/scripts/toggle-monitor.sh
+
 # Win + . -> emoji selector
 bind = $mainMod, period, exec, $HOME/.local/scripts/emoji.sh
 
 # printscreen from from https://wiki.hyprland.org/FAQ/#how-do-i-screenshot
 # No mod! Just press printscreen
-bind = , Print, exec, grim -g "$(slurp -d)" - | wl-copy
 # Add Super key to pipe to swappy instead
-bind = $mainMod, Print, exec, grim -g "$(slurp -d)" - | swappy -f -
+bind = , Print, exec, grim -g "$(slurp -d)" - | swappy -f -
+# Mod key with printscreen to take the whole frame
+bind = , Print, exec, grim - | swappy -f -
+
 bind = $mainMod, F, fullscreen
 
 bind = $mainMod SHIFT, P, exec, $HOME/.local/scripts/color-picker-with-notify.sh 
