--- a/desktop/lock.desktop
+++ b/desktop/lock.desktop
@@ -13,10 +13,10 @@ Name=Lock screen
 Comment=Lock screen
 
 # The path to the folder in which the executable is run
-Path=/home/tnwei/.local/scripts/
+# Path=/home/tnwei/.local/scripts/
 
 # The executable of the application, possibly with arguments.
-Exec=power.sh lock
+Exec=/home/tnwei/.local/scripts/power-hyprland.sh lock
 
 # Describes whether this application needs to be run in a terminal or not
 Terminal=false
