--- a/desktop/logout.desktop
+++ b/desktop/logout.desktop
@@ -13,10 +13,10 @@ Name=Log out
 Comment=Log out
 
 # The path to the folder in which the executable is run
-Path=/home/tnwei/.local/scripts/
+# Path=/home/tnwei/.local/scripts/
 
 # The executable of the application, possibly with arguments.
-Exec=power.sh logout
+Exec=/home/tnwei/.local/scripts/power-hyprland.sh logout
 
 # Describes whether this application needs to be run in a terminal or not
 Terminal=false
