--- a/desktop/power.desktop
+++ b/desktop/power.desktop
@@ -13,10 +13,11 @@ Name=Power Menu
 Comment=Power settings (Lock / Logout / Suspend / Reboot / Shutdown)
 
 # The path to the folder in which the executable is run
-Path=/home/tnwei/.local/scripts/
+# Path=/home/tnwei/.local/scripts/
 
 # The executable of the application, possibly with arguments.
-Exec=power.sh
+Exec=/home/tnwei/.local/scripts/power-hyprland.sh
+# Exec=$HOME/.local/scripts/power-hyprland.sh
 
 # Describes whether this application needs to be run in a terminal or not
 Terminal=false
