--- a/desktop/reboot.desktop
+++ b/desktop/reboot.desktop
@@ -10,13 +10,13 @@ Version=1.0
 Name=Reboot
 
 # A comment which can/will be used as a tooltip
-Comment=Reboot
+Comment=Reboot / Restart
 
 # The path to the folder in which the executable is run
-Path=/home/tnwei/.local/scripts/
+# Path=/home/tnwei/.local/scripts/
 
 # The executable of the application, possibly with arguments.
-Exec=power.sh reboot
+Exec=/home/tnwei/.local/scripts/power-hyprland.sh reboot
 
 # Describes whether this application needs to be run in a terminal or not
 Terminal=false
