--- a/desktop/shutdown.desktop
+++ b/desktop/shutdown.desktop
@@ -13,10 +13,10 @@ Name=Shutdown
 Comment=Shutdown
 
 # The path to the folder in which the executable is run
-Path=/home/tnwei/.local/scripts/
+# Path=/home/tnwei/.local/scripts/
 
 # The executable of the application, possibly with arguments.
-Exec=power.sh shutdown
+Exec=/home/tnwei/.local/scripts/power-hyprland.sh shutdown
 
 # Describes whether this application needs to be run in a terminal or not
 Terminal=false
