update: change app launcher Win + O to Win + D

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -210,7 +210,21 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit, 
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, togglefloating, 
-bind = $mainMod, O, exec, pkill -x fuzzel || fuzzel
+
+# fuzzel can't launch scripts?
+# When on fuzzel, power.sh is not found
+# bind = $mainMod, O, exec, pkill -x wofi || wofi
+
+# When on tofi, power.sh is not found coz ran using /bin/sh
+# tofi-drun literally returns command so easier to hack on
+# bind = $mainMod, O, exec, pkill -x tofi-drun || tofi-drun | xargs hyprctl dispatch exec --
+
+# I think wofi reads desktop file path and exec, the other two dont
+# tofi-drun just returns the search term!
+# fuzzel doesnt run from the same dir while wofi does
+# So, make all my scripts global in path can liao
+bind = $mainMod, D, exec, pkill -x fuzzel || fuzzel
+
 bind = $mainMod, R, exec, hyprctl reload
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
