update: updated hyprland config to 0.51

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -185,10 +185,8 @@ master {
     new_status = master
 }
 
-gestures {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = on
-}
+# Change in hyprland 0.51
+gesture = 3, horizontal, workspace
 
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
@@ -253,7 +251,7 @@ bind = $mainMod, period, exec, $HOME/.local/scripts/emoji.sh
 # Add Super key to pipe to swappy instead
 bind = , Print, exec, grim -g "$(slurp -d)" - | swappy -f -
 # Mod key with printscreen to take the whole frame
-bind = , Print, exec, grim - | swappy -f -
+bind = , Print, exec, 'grim - | swappy -f -'
 
 bind = $mainMod, F, fullscreen
 
